{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Move",
            "id": "4d729629-5156-4444-b6cc-2909ff03c3cc",
            "actions": [
                {
                    "name": "Sideways",
                    "type": "PassThrough",
                    "id": "434ba5f4-1294-4768-a00c-40bafe494ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8b1d6ca8-7e61-4bdc-8883-59cc0a286d0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DoubleJump",
                    "type": "Button",
                    "id": "ae1fd5b5-07f2-4d50-ac3e-b059484f3b07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "3cb22411-c6d5-40a8-a5bf-b3313de66b39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "30ee4667-b455-4f0b-901f-5552a66e14fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "LeftRight",
                    "id": "0fcc2080-5212-47e8-bb52-bf2e701830f7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sideways",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b76b2fb6-b66c-483d-99f4-f90994438341",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sideways",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f1d18473-7a3c-4126-9c83-7ea5479a04e6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sideways",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "85385450-ad56-4461-8dd0-5153dc853686",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65648e9d-4b49-4399-b9a6-347065b786c3",
                    "path": "<Keyboard>/space",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29f30d04-70bb-46e8-9919-472286fd41cf",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98a08097-c307-4aec-88e1-c969bd482b0f",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}